--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -90,6 +90,7 @@
 
 
     <!-- 0806 -->
+    <!--
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif"
         android:layout_width="match_parent"
@@ -98,7 +99,10 @@
         android:layout_marginTop="150dp"
         android:layout_marginBottom="200dp"
         android:src="@drawable/blue_fish" />
+        -->
+
     <!-- 0821 -->
+    <!--
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/fish_gif_2"
         android:layout_width="match_parent"
@@ -107,6 +111,7 @@
         android:layout_marginTop="300dp"
         android:layout_marginBottom="200dp"
         android:src="@drawable/blue_fish" />
+        -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/bw_fish"
         android:layout_width="match_parent"
@@ -142,6 +147,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 0930 -->
+
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/blue_fish_0"
         android:src="@drawable/blue_fish"
@@ -151,6 +157,15 @@
         android:autoMirrored="true"
         android:repeatCount="-1"
         android:visible="false" />
+
+    <!--
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+    -->
 
     <!-- repeatCount=-1: repeat as long as it is displayed (once start() is called) -->
     <!-- 1009: set visibility -->
