--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -40,9 +40,18 @@
         android:text="註冊"
         android:textSize="18sp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="217dp"
+        android:text="帳號："
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
     <EditText
         android:id="@+id/AccountInput"
-        android:layout_width="250dp"
+        android:layout_width="150dp"
         android:layout_height="45dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -54,9 +63,19 @@
         android:layout_marginBottom="490dp"
         android:ems="10"
         android:inputType="text"
-        android:text="帳號"
+        android:text=""
         android:textSize="18sp" />
 
+
+    <TextView
+        android:id="@+id/accountLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="密碼："
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="267dp"/>
     <EditText
         android:id="@+id/PasswordInput"
         android:layout_width="250dp"
@@ -71,7 +90,7 @@
         android:layout_marginBottom="440dp"
         android:ems="10"
         android:inputType="text"
-        android:text="密碼"
+        android:text=""
         android:textSize="18sp" />
 
 </RelativeLayout>
