--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -40,6 +40,15 @@
         android:textSize="18sp"
         android:background="@color/itemBlue" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="160dp"
+        android:text="姓名："
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
     <EditText
         android:id="@+id/NameInput"
         android:layout_width="250dp"
@@ -54,7 +63,16 @@
         android:layout_marginBottom="540dp"
         android:ems="10"
         android:inputType="text"
-        android:text="姓名"
+        android:text=""
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="210dp"
+        android:text="帳號："
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <EditText
@@ -71,7 +89,16 @@
         android:layout_marginBottom="490dp"
         android:ems="10"
         android:inputType="text"
-        android:text="帳號"
+        android:text=""
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="260dp"
+        android:text="密碼："
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <EditText
@@ -88,7 +115,7 @@
         android:layout_marginBottom="440dp"
         android:ems="10"
         android:inputType="text"
-        android:text="密碼"
+        android:text=""
         android:textSize="18sp" />
 
 </RelativeLayout>
