--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -13,13 +13,13 @@
             android:title="Home"/>
 
         <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/nav_settings"
-            android:title="Timer"/>
+            android:id="@+id/timer"
+            android:icon="@drawable/timer"
+            android:title="Pomodoro"/>
 
         <item
-            android:id="@+id/nav_share"
-            android:icon="@drawable/nav_share"
+            android:id="@+id/calendar"
+            android:icon="@drawable/calendar"
             android:title="Calendar"/>
 
         <item
