--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -6,18 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CalendarFragment">
+    android:background="#FFFFFF"
+    tools:context=".WeekViewActivity">
 
-    <Button
-        android:id="@+id/weeklyAction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Weekly"
-        android:textColor="@color/blue"
-        android:background="@null"
-        android:textStyle="bold"
-        android:textSize="20sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +17,6 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp">
         <Button
-            android:id="@+id/previousButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,6 +24,7 @@
             android:textColor="@color/blue"
             android:background="@null"
             android:textStyle="bold"
+            android:onClick="previousWeekAction"
             android:textSize="20sp"/>
 
         <TextView
@@ -47,7 +38,6 @@
             android:textColor="@color/black"/>
 
         <Button
-            android:id="@+id/nextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,6 +45,7 @@
             android:textColor="@color/blue"
             android:background="@null"
             android:textStyle="bold"
+            android:onClick="nextWeekAction"
             android:textSize="20sp"/>
 
     </LinearLayout>
@@ -62,7 +53,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="0dp"
@@ -127,11 +118,31 @@
             android:textAlignment="center"
             android:textSize="16sp"/>
 
+
     </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calendarRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Event"
+        android:textColor="@color/blue"
+        android:background="@null"
+        android:textStyle="bold"
+        android:onClick="newEventAction"
+        android:layout_gravity="center"
+        android:textSize="20sp"/>
+
+    <ListView
+        android:id="@+id/eventListView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"/>
 
 </LinearLayout>
