--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -1,96 +1,85 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainBlue"
-    android:orientation="vertical">
+    android:background="@color/mainBlue">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/LoginButton"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="370dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="340dp"
-        android:background="@color/itemBlue"
-        android:text="登入"
-        android:textSize="18sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/RegisterButton"
-        android:layout_width="200sp"
-        android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="430dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="280dp"
-        android:background="@color/itemBlue"
-        android:text="註冊"
-        android:textSize="18sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="217dp"
-        android:text="帳號："
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/AccountInput"
-        android:layout_width="150dp"
-        android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="210dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="490dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text=""
-        android:textSize="18sp" />
-
-
+    <!-- 帳號標籤 -->
     <TextView
         android:id="@+id/accountLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="密碼："
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="267dp"/>
+
+        android:text="帳號："
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:layout_marginTop="250dp"/>
+
+    <!-- 帳號輸入 -->
+    <EditText
+        android:id="@+id/AccountInput"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+
+        android:layout_marginTop="240dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginEnd="50dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text=""
+        android:textSize="20sp"
+        android:visibility="visible" />
+
+    <!-- 密碼標籤 -->
+    <TextView
+        android:id="@+id/passLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:text="密碼："
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:layout_below="@id/accountLabel"
+        android:layout_marginTop="10dp"/>
+
+    <!-- 密碼輸入 -->
     <EditText
         android:id="@+id/PasswordInput"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="440dp"
+        android:layout_below="@id/AccountInput"
+        android:layout_marginTop="0dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginEnd="50dp"
         android:ems="10"
         android:inputType="text"
         android:text=""
         android:textSize="18sp" />
 
+    <!-- 登入按鈕 -->
+    <Button
+        android:id="@+id/LoginButton"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_below="@id/PasswordInput"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:background="@color/itemBlue"
+        android:text="登入"
+        android:textSize="20sp"
+        android:gravity="center" />
+
+    <!-- 註冊按鈕 -->
+    <Button
+        android:id="@+id/RegisterButton"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_below="@id/LoginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@color/itemBlue"
+        android:text="註冊"
+        android:textSize="20sp"
+        android:gravity="center" />
 </RelativeLayout>
