--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -1,121 +1,109 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainBlue"
-    android:orientation="vertical">
+    android:background="@color/mainBlue">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/ConfirmButton"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="370dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="340dp"
-        android:background="@color/itemBlue"
-        android:text="確認註冊"
-        android:textSize="18sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/CancelButton"
-        android:layout_width="200dp"
-        android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="430dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginBottom="280dp"
-        android:text="取消"
-        android:textSize="18sp"
-        android:background="@color/itemBlue" />
-
+    <!-- 姓名標籤 -->
     <TextView
+        android:id="@+id/nameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="200dp"
         android:text="姓名："
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
+    <!-- 姓名輸入 -->
     <EditText
         android:id="@+id/NameInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="160dp"
+
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="190dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="540dp"
         android:ems="10"
         android:inputType="text"
         android:text=""
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
+    <!-- 帳號標籤 -->
     <TextView
+        android:id="@+id/accountLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="210dp"
+        android:layout_below="@id/nameLabel"
+        android:layout_marginTop="20dp"
         android:text="帳號："
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
+    <!-- 帳號輸入 -->
     <EditText
         android:id="@+id/AccountInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="210dp"
+        android:layout_below="@id/NameInput"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="110dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="490dp"
         android:ems="10"
         android:inputType="text"
         android:text=""
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
+    <!-- 密碼標籤 -->
     <TextView
+        android:id="@+id/passLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="260dp"
+        android:layout_below="@id/accountLabel"
+        android:layout_marginTop="20dp"
         android:text="密碼："
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="20sp"
+        android:textColor="@android:color/black" />
 
+    <!-- 密碼輸入 -->
     <EditText
         android:id="@+id/PasswordInput"
         android:layout_width="250dp"
         android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="260dp"
+        android:layout_below="@id/AccountInput"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="110dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="440dp"
         android:ems="10"
         android:inputType="text"
         android:text=""
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
+    <!-- 確認註冊按鈕 -->
+    <Button
+        android:id="@+id/ConfirmButton"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_below="@id/PasswordInput"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:background="@color/itemBlue"
+        android:text="確認註冊"
+        android:textSize="20sp"
+        android:gravity="center" />
+
+    <!-- 取消按鈕 -->
+    <Button
+        android:id="@+id/CancelButton"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_below="@id/ConfirmButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="取消"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:background="@color/itemBlue" />
 </RelativeLayout>
