--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -63,6 +63,15 @@
 
     <!-- DataType1 的 RecyclerView -->
 
+    <ImageButton
+        android:id="@+id/BackToHome"
+        android:layout_width="52dp"
+        android:layout_height="50dp"
+        android:background="@color/itemBlue"
+        app:srcCompat="@drawable/nav_home"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_data_daily"
         android:layout_width="0dp"
@@ -74,14 +83,8 @@
         app:layout_constraintTop_toBottomOf="@id/include"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageButton
-        android:id="@+id/BackToHome"
-        android:layout_width="35dp"
-        android:layout_height="33dp"
-        app:srcCompat="@drawable/ic_menu"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp"
-         />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
