--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -149,6 +149,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+
+
+    <ImageButton
+        android:id="@+id/share_back"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="600dp"
+        android:layout_marginBottom="60dp"
+        android:src="@android:drawable/ic_menu_close_clear_cancel" />
+
     <!-- 0930
 
     <pl.droidsonroids.gif.GifImageView
