--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,17 +11,18 @@
 
 
     <!-- 0813 -->
+
+    <!-- 0813 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/barrel_gif"
         android:layout_width="200dp"
         android:layout_height="300dp"
-        android:src="@drawable/barrel_1"
         android:layout_marginStart="0dp"
         android:layout_marginTop="450dp"
         android:layout_marginEnd="250dp"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="50dp"
+        android:src="@drawable/barrel_1" />
 
-    <!-- 0813 -->
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/seaweed_gif"
         android:layout_width="300dp"
@@ -133,7 +134,7 @@
         android:src="@drawable/black_white_fish" />
     -->
 
-    <!-- 0807 -->
+    <!-- 0807
     <Button
         android:id="@+id/addFish"
         style="@style/TextAppearance.AppCompat.Widget.Button"
@@ -147,7 +148,7 @@
         android:padding="3dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />-->
 
 
 
@@ -158,6 +159,7 @@
         android:layout_marginStart="176dp"
         android:layout_marginTop="600dp"
         android:layout_marginBottom="60dp"
+        android:background="@color/mainBlue"
         android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
     <!-- 0930
